# PixelView

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
src/: ansi_loader.cpp  ansi_loader.h  app.cpp  app.h  app_cfgfile.cpp  app_ui.cpp  gd.h  gl_util.cpp  main.cpp  string_util.cpp  string_util.h  version.h
